# youbot_retrofitting

./: .gitignore  README.md
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/: CMakeLists.txt  package.xml
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/launch/: xacroload.launch  youbot.rviz  youbot_arm_description.launch  youbot_arm_publisher.launch  youbot_arm_publisher_no_x.launch  youbot_base_description.launch  youbot_base_publisher.launch  youbot_base_publisher_no_x.launch  youbot_description.launch  youbot_gripper_description.launch  youbot_publisher.launch  youbot_publisher_no_x.launch  youbot_rviz.launch  youbot_sensor_publisher.launch
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/robots/: youbot-sensors.urdf.xacro  youbot.urdf.xacro  youbot_dual_arm.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/src/: joint_position_control.cpp  youbot_universal_control.cpp
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/: common.xacro  materials.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/misc/: cam3d_tower.urdf.xacro  sensor_angle.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/sensors/: asus_xtion_camera.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/youbot_arm/: arm.gazebo.xacro  arm.urdf.xacro  limits.urdf.xacro  static_link.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/youbot_base/: base.transmission.xacro  base.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_description/urdf/youbot_gripper/: limits.urdf.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_common/youbot_trajectory_action_server/: CMakeLists.txt  package.xml
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_drivers/youbot_oodl/: CMakeLists.txt  Makefile  package.xml
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_drivers/youbot_oodl/examples/: youbot_aruco_controller.py  youbot_keyboard_teleop.py
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_drivers/youbot_oodl/launch/: youbot_joint_state_publisher.launch  youbot_oodl_driver.launch
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_plugin/realsense2_description/urdf/: _d435.gazebo.xacro
youbot_ws/src/ros_stacks/youbot-ros-pkg/youbot_plugin/realsense_gazebo_plugin/urdf/: camera.urdf.xacro
youbot_ws/src/youbot_driver/: CMakeLists.txt  manifest.xml  package.xml
youbot_ws/src/youbot_driver/config/: youbot-ethercat.cfg
youbot_ws/src/youbot_driver/youbot/: CMakeCache.txt  Makefile  YouBotManipulator.cpp  cmake_install.cmake  gdn_lib.cpp
youbot_ws/src/youbot_driver/youbot/display/: Makefile  cmake_install.cmake
youbot_ws/src/youbot_driver/youbot/soem/: Makefile  cmake_install.cmake
youbot_ws/src/youbot_driver/youbot/testing/: Makefile  cmake_install.cmake
