<?xml version="1.0"?>
<package format="2">
    <name>youbot_oodl</name>
    <version>0.0.0</version>
    <description>youbot oodl</description>
    <author email="alberto.remus@santannapisa.it">aaa</author>
    <maintainer email="alberto.remus@santannapisa.it">aaa</maintainer>

    <license>GNU GPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>brics_actuator</build_depend>
    <build_depend>youbot_driver</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>pr2_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>std_srvs</build_export_depend>
    <build_export_depend>trajectory_msgs</build_export_depend>
    <build_export_depend>brics_actuator</build_export_depend>
    <build_export_depend>youbot_driver</build_export_depend>
    <build_export_depend>control_msgs</build_export_depend>
    <build_export_depend>actionlib</build_export_depend>
    <build_export_depend>diagnostic_msgs</build_export_depend>
    <build_export_depend>pr2_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>brics_actuator</exec_depend>
    <exec_depend>youbot_driver</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>diagnostic_msgs</exec_depend>
    <exec_depend>pr2_msgs</exec_depend>

    <build_depend>setcap</build_depend>
    <exec_depend>setcap</exec_depend>

</package>

